# pupil

./: .gitignore  AGENTS.md  BUILDING.md  CNAME  LICENSE  README.md  biome.json  lefthook.yml  package.json  tsconfig.base.json  turbo.json
.github/workflows/: build.yml  deploy-site.yml  publish.yml
.turbo/preferences/: tui.json
apps/app/: AGENTS.md  DESIGN.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/app/references/: study.html
apps/app/src/: App.tsx  app-router.tsx  main.tsx  pupil.html  sqljs.d.ts  style.css
apps/app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/migrations/: 0001_init.sql  0002_add_learning_steps.sql  0003_add_suspended.sql  0004_add_card_explanation.sql  0005_add_card_explanation_payload.sql
apps/app/src-tauri/src/: ai.rs  analytics.rs  app.rs  cards.rs  commands.rs  constants.rs  error.rs  imports.rs  lib.rs  main.rs  migration_runner.rs  migrations.rs  normalize.rs  settings.rs  spaces.rs  study_queue.rs  tray.rs  types.rs  util.rs
apps/app/src-tauri/src/ai/: explain.rs  generation.rs  mod.rs  provider.rs  secrets.rs  settings.rs  validation.rs
apps/app/src-tauri/src/migrations/: v0006_card_explanation.rs
apps/app/src-tauri/src/tests/: ai.rs  analytics.rs  cards.rs  explain.rs  imports.rs  migrations.rs  mod.rs  normalize.rs  settings.rs  spaces.rs  study_queue.rs  support.rs  tray.rs  util.rs
apps/app/src/components/: Dashboard.tsx  DebugBar.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  Pagination.module.css  Pagination.tsx  StatusPanel.tsx
apps/app/src/layouts/: LayoutHome.tsx  types.ts
apps/app/src/lib/: activity.ts  ai-explain.ts  ai-explanation.test.ts  ai-explanation.ts  ai-providers.test.ts  ai-providers.ts  ai-settings.ts  app-queries.ts  app-store.ts  app-version.ts  bootstrap.ts  cards.ts  daily-checkin.ts  data-actions.ts  derived.test.ts  derived.ts  errors.test.ts  errors.ts  fsrs.test.ts  fsrs.ts  imports.ts  ipc.ts  log.ts  notifications.ts  onboarding.ts  query.ts  runtime.ts  seed-data.ts  spaces.ts  stats.ts  study-queue.test.ts  study-queue.ts  study-settings.test.ts  study-settings.ts  theme.test.ts  theme.ts  tray.ts  web-store.ts
apps/app/src/routes/: AppShell.module.css  AppShellFrame.tsx  (+10 more)
apps/site/: DESIGN.md  index.html  package.json  tsconfig.json
apps/site/public/: CNAME
apps/site/src/: App.tsx  Manifesto.module.css  Manifesto.tsx  Nav.tsx  global.css  main.tsx  style.css
docs/: APP_GAPS.md  ARCHITECTURE_REVIEW.md  MULTI_PLATFORM_ARCHITECTURE.md  PHASE_1_SPEC.md  PHASE_2_SPEC.md  RELEASING.md
docs/design-references/: aigen.html  cards.html  import.html  newcard.html  onboarding.html  palette.html  settings.html  spacedetails.html
scripts/: desktop-release.mjs  test-rust-coverage.sh
(+186 files in other folders)
