[package]
name = "pupil-app"
version = "0.0.1"
description = "Pupil desktop app"
authors = ["Pupil"]
edition = "2021"

[lib]
name = "pupil_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
nanoid = "0.4.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-stronghold = "2.3.1"
