[package]
name = "pupil-app"
version = "0.0.1"
description = "Pupil desktop app"
authors = ["Pupil"]
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[lib]
name = "pupil_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
nanoid = "0.4.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2.4.1", features = ["tray-icon"] }
tauri-plugin-stronghold = "2.3.1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", features = ["apple-native"] }

[profile.dev.package.scrypt]
opt-level = 3
